2005-05-20  Mark Mitchell  <mark@codesourcery.com>

	* version.c (version_string): Mark as 3.4.5.

2005-05-19  Mark Mitchell  <mark@codesourcery.com>

	* version.c (version_string): Restore pre-release marker.

2005-05-19  Release Manager

	* GCC 3.4.4 released.

2005-05-11  Mark Mitchell  <mark@codesourcery.com>

	Revert:
	2005-05-10  H.J. Lu  <hongjiu.lu@intel.com>
	Backport from mainline
	2004-02-12  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
	* function.c (fixup_var_refs): Save volatile_ok and set to 1.
	* expr.c (emit_block_move_via_movstr): Save and restore
	volatile_ok.
	2005-05-09  Grigory Tolstolytkin  <gtolstolytkin@ru.mvista.com>
	Backport from mainline
	2004-02-12  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
	* emit-rtl.c (set_mem_attributes_minus_bitpos): Don't kill previous
	MEM_VOLATILE in REF.

2005-05-11  Ben Elliston  <bje@au.ibm.com>

	* dwarf2out.c: Revert my 2005-05-10 patch.

2005-05-10  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2004-02-12  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
	* function.c (fixup_var_refs): Save volatile_ok and set to 1.
	* expr.c (emit_block_move_via_movstr): Save and restore
	volatile_ok.

2005-05-10  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.md (sse_mov?fcc* splitters): Add mode to
	IF_THEN_ELSE, remove mode from MATCH_OPERATOR.  Fix a typo.

2005-05-09  Grigory Tolstolytkin  <gtolstolytkin@ru.mvista.com>

	Backport from mainline
	2004-02-12  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
	* emit-rtl.c (set_mem_attributes_minus_bitpos): Don't kill previous
	MEM_VOLATILE in REF.

2005-05-10  Ben Elliston  <bje@au.ibm.com>

	PR debug/16676
	* dwarf2out.c (dwarf2out_decl): Always set context_die to NULL,
	even when debug_info_level is DINFO_LEVEL_TERSE.

2005-05-08  Stephane Carrez  <stcarrez@nerim.fr>

	* config/m68hc11/m68hc11.c (m68hc11_z_replacement): Use emit_insn_after
	when adding the save Z instruction so that it is part of the good BB.