@@ -1,3 +1,8 @@
+2005-05-23  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* unroll.c (loop_iterations): Remove common term from initial
+	and final value only if it is loop invariant.
+
 2005-05-20  Mark Mitchell  <mark@codesourcery.com>
 
 	* version.c (version_string): Mark as 3.4.5.
